--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=12345jadab
+DB_PASSWORD=pm987098
 DB_NAME=LOSQ
-PORT=3000
-JWT_KEY = jwt_secret_key
+PORT=3306
+JWT_KEY=jwt_secret_key
